# IsingModelLikeSimulation

./: 1d_parallel_array.cpp  1d_parallel_array.h  2d.conf  2d_parallel_array.cpp  2d_parallel_array.h  Dockerfile  README.md  config_2d.py  docker-compose.yaml  load_config_2d.py  main.py  parallel_array_in_Ising_model.cpp  pyproject.toml  requirements.txt  test.cpp  utility.cpp  utility.h  visualize.py
.devcontainer/: devcontainer.json  docker-compose.yml
cpp_codes/: 1d_parallel_array.cpp  utility.h
documents/: main.tex
ising_model_like_simulator/components/initial_condition/: __init__.py  initial_field_creator.py
ising_model_like_simulator/data_structures/: __init__.py  config_dataclass.py
test/components/initial_condition/: test_initial_field_creator.py
